--- a/Jinwei_Zhang/AnimationWeb/styles/styles.css
+++ b/Jinwei_Zhang/AnimationWeb/styles/styles.css
@@ -8,3 +8,11 @@ body{
 #display>*{
     border: 1px dashed black;
 }
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 8px;
+    margin-left: 8px;
+}
