--- a/Jinwei_Zhang/PassportAuthenticationLearning/views/layout.ejs
+++ b/Jinwei_Zhang/PassportAuthenticationLearning/views/layout.ejs
@@ -10,10 +10,11 @@
 
     <link href="https://getbootstrap.com/docs/4.3/examples/floating-labels/" rel="canonical">
 
-    <!-- Bootstrap core CSS -->
-    <link crossorigin="anonymous" href="../css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/4.3/examples/floating-labels/" rel="canonical">
 
+    <!-- Bootstrap core CSS -->
+    <link crossorigin="anonymous" href="/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -32,7 +33,7 @@
         }
     </style>
     <!-- Custom styles for this template -->
-    <link href="../css/floating-labels.css" rel="stylesheet">
+    <link href="/css/floating-labels.css" rel="stylesheet">
 
 </head>
 <body>
