--- a/Jinwei_Zhang/PassportAuthenticationLearning/views/login.ejs
+++ b/Jinwei_Zhang/PassportAuthenticationLearning/views/login.ejs
@@ -1,6 +1,6 @@
 <form class="form-signin">
     <div class="text-center mb-4">
-        <img alt="" class="mb-4" height="86" src="../../logo/logo.png" width="195">
+        <img alt="" class="mb-4" height="86" src="logo/logo.png" width="195">
 
         <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a
                     href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, and Firefox.</a>
